--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+
     <header>
         My Fight
         <nav>
@@ -18,7 +19,8 @@
         </nav>
     </header>
 
-    <div id="one">
+    <div class="one">
+
         <h1>
             What it takes...
         </h1>
@@ -67,8 +69,8 @@
 
             <p>
                 <em>Even with all this hell I am living with i push through as i know there are people who are depending on me. BUT not everyone can deal
-                    with the pain and heartache that depression can bring so please reach out and help someone you know who deals with depression. Even
-                    if they say they don't need it trust me they do.</em>
+                with the pain and heartache that depression can bring so please reach out and help someone you know who deals with depression. Even
+                if they say they don't need it trust me they do.</em>
             </p>
 
         </section>
@@ -135,7 +137,9 @@
 
         </section>
     </div>
-    <footer>Remember to keep others in your thoughts...</footer>
+    <div id="footer">
+        <footer>Remember to keep others in your thoughts...</footer>
+    </div>
 
 </body>
 
