--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <div class="one">
+    <div id="one">
 
         <h1>
             What it takes...
@@ -59,6 +59,41 @@
                 <li>Difficulty concentrating, remembering, or making decisions</li>
                 <li>Persistent physical symptoms that do not respond to treatment, such as headaches, digestive disorders, and chronic pain</li>
             </ol>
+            <h3>Ways you can help!</h3>
+            <table>
+                <tr id="odd">
+                    <th>Symptom (ref to numbers above)</th>
+                    <th>Way To Help</th>
+                </tr>
+                <tr>
+                    <td>1-3</td>
+                    <td>Take them outside for a while, go for walks with them</td>
+                </tr>
+                <tr id="odd">
+                    <td>4</td>
+                    <td>Remind them of ways they have helped others</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Help them have a set time to go to bed and to wake up, dont let them sleep in to much or sleep to little</td>
+                </tr>
+                <tr id="odd">
+                    <td>6 (7 by association)</td>
+                    <td>Make them eat!!! They wont want to MAKE THEM This is noe of my biggest problems and trust me YOU NEED TO EAT!!</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Remind them of all the reason they have to stay. DONT tell them it will hurt others that will only make them feel worse</td>
+                </tr>
+                <tr id="odd">
+                    <td>9</td>
+                    <td>Help them make to-do lists and actually complete them</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Understand that these are not just in the persons mind and make allowances to make their life a little easier.</td>
+                </tr>
+            </table>
         </section>
 
         <section>
