--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -10,15 +10,14 @@
 
     <header>
         My Fight
-        <nav>
-            <ul>
-                <li><a href="#Mornings">Mornings</a></li>
-                <li><a href="#symptoms">Symptoms Of Depression</a></li>
-                <li><a href="#photos">Photos</a></li>
-            </ul>
-        </nav>
     </header>
-
+    <nav>
+        <ul>
+            <li><a href="#Mornings">Mornings</a></li>
+            <li><a href="#symptoms">Symptoms Of Depression</a></li>
+            <li><a href="#photos">Photos</a></li>
+        </ul>
+    </nav>
     <div id="one">
 
         <h1>
@@ -61,15 +60,15 @@
             </ol>
             <h3>Ways you can help!</h3>
             <table>
-                <tr id="odd">
-                    <th>Symptom (ref to numbers above)</th>
-                    <th>Way To Help</th>
+                <tr class="odd">
+                    <th scope="col">Symptom (ref to numbers above)</th>
+                    <th scope="col">Way To Help</th>
                 </tr>
                 <tr>
                     <td>1-3</td>
                     <td>Take them outside for a while, go for walks with them</td>
                 </tr>
-                <tr id="odd">
+                <tr class="odd">
                     <td>4</td>
                     <td>Remind them of ways they have helped others</td>
                 </tr>
@@ -77,7 +76,7 @@
                     <td>5</td>
                     <td>Help them have a set time to go to bed and to wake up, dont let them sleep in to much or sleep to little</td>
                 </tr>
-                <tr id="odd">
+                <tr class="odd">
                     <td>6 (7 by association)</td>
                     <td>Make them eat!!! They wont want to MAKE THEM This is noe of my biggest problems and trust me YOU NEED TO EAT!!</td>
                 </tr>
@@ -85,7 +84,7 @@
                     <td>8</td>
                     <td>Remind them of all the reason they have to stay. DONT tell them it will hurt others that will only make them feel worse</td>
                 </tr>
-                <tr id="odd">
+                <tr class="odd">
                     <td>9</td>
                     <td>Help them make to-do lists and actually complete them</td>
                 </tr>
